using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;

namespace Assets.Classes {
    public static class triggers {
        public const String ACTIVATE = "Activate";
        public const String ARRIVE = "Arrive";
        public const String ATTACKLEFT = "AttackLeft";
        public const String ATTACKRIGHT = "AttackRight";
        public const String DISMISS = "Dismiss";
        public const String DYING = "Die";
        public const String FADE = "Fade";
        public const String FEAR = "Fear";
        public const String HIT = "Hit";
        public const String JUMP = "Jump";
        public const String LEGWIGGLESPEED = "LegWiggleSpeed";
        public const String MINUS = "Minus";
        public const String MOVELEGS = "MoveLegs";
        public const String PLUS = "Plus";
        public const String SHAKECAMERA = "ShakeCamera";
        public const String SHOW_AUDIO = "ShowAudio";
        public const String SHOW_GRAPHICS = "ShowGraphics";
        public const String SHOW_REST = "ShowRest";
        public const String SHOW_UP = "ShowUp";
        public const String START = "Start";
        public const String VANISH = "Vanish";
    }
}
